Changed descriptions for all trainers/professional boxers. ###  Fixed spacing issue with footer. ### Moved about page details to equiptment view. This is information regarding the gym. ### Changes to the design/layout of the details view for promotions. ###

--- a/BoxingSite/Content/Site.css
+++ b/BoxingSite/Content/Site.css
@@ -630,6 +630,14 @@ label {
 
 
 
+
+.eventEnded {
+    font-weight: bold;
+    color: white;
+    padding: 10px 20px;
+    background-color: gray;
+    margin-bottom: 80px;
+}
 /*.tiles article.style2 > .image:before {
     background-color: #7ecaf6;
 }
@@ -650,3 +658,8 @@ label {
     background-color: #8499e7;
 }*/
 
+.subheading {
+    font-family: "Oswald", sans-serif;
+    font-weight: 200;
+    padding: 0px;
+}
